// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component renders a select with 3 options 1`] = `
@media  {
  .c-hqoSmB {
    -webkit-appearance: none;
    appearance: none;
    background-color: white;
    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23757575%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23757575%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
    background-repeat: no-repeat, repeat;
    border: 1px solid var(--colors-tonal300);
    border-radius: var(--radii-0);
    color: var(--colors-tonal600);
    display: block;
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-hqoSmB:hover {
    cursor: pointer;
  }

  .c-hqoSmB:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-hqoSmB::-ms-expand {
    display: none;
  }

  .c-hqoSmB[disabled],
  .c-hqoSmB > option[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-hqoSmB-ggkvuX-size-md {
    background-position: right var(--space-3) top 50%, 0 0;
    background-size: 20px auto, 100%;
    font-size: var(--fontSizes-md);
    height: var(--sizes-4);
    padding-left: var(--space-3);
    padding-right: var(--space-6);
  }
}

<div>
  <select
    aria-label="dropdown"
    class="c-hqoSmB c-hqoSmB-ggkvuX-size-md"
  >
    <option
      value="value1"
    >
      Option 1
    </option>
    <option
      value="value2"
    >
      Option 2
    </option>
    <option
      value="value3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Select component renders an disabled select 1`] = `
@media  {
  .c-hqoSmB {
    -webkit-appearance: none;
    appearance: none;
    background-color: white;
    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23757575%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23757575%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
    background-repeat: no-repeat, repeat;
    border: 1px solid var(--colors-tonal300);
    border-radius: var(--radii-0);
    color: var(--colors-tonal600);
    display: block;
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-hqoSmB:hover {
    cursor: pointer;
  }

  .c-hqoSmB:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-hqoSmB::-ms-expand {
    display: none;
  }

  .c-hqoSmB[disabled],
  .c-hqoSmB > option[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-hqoSmB-ggkvuX-size-md {
    background-position: right var(--space-3) top 50%, 0 0;
    background-size: 20px auto, 100%;
    font-size: var(--fontSizes-md);
    height: var(--sizes-4);
    padding-left: var(--space-3);
    padding-right: var(--space-6);
  }
}

<div>
  <select
    aria-label="dropdown"
    class="c-hqoSmB c-hqoSmB-ggkvuX-size-md"
    disabled=""
  />
</div>
`;

exports[`Select component renders lg size 1`] = `
@media  {
  .c-hqoSmB {
    -webkit-appearance: none;
    appearance: none;
    background-color: white;
    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23757575%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23757575%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
    background-repeat: no-repeat, repeat;
    border: 1px solid var(--colors-tonal300);
    border-radius: var(--radii-0);
    color: var(--colors-tonal600);
    display: block;
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-hqoSmB:hover {
    cursor: pointer;
  }

  .c-hqoSmB:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-hqoSmB::-ms-expand {
    display: none;
  }

  .c-hqoSmB[disabled],
  .c-hqoSmB > option[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-hqoSmB-ggkvuX-size-md {
    background-position: right var(--space-3) top 50%, 0 0;
    background-size: 20px auto, 100%;
    font-size: var(--fontSizes-md);
    height: var(--sizes-4);
    padding-left: var(--space-3);
    padding-right: var(--space-6);
  }

  .c-hqoSmB-sUrCW-size-lg {
    background-position: right var(--space-3) top 50%, 0 0;
    background-size: 20px auto, 100%;
    font-size: var(--fontSizes-md);
    height: var(--sizes-5);
    padding-left: var(--space-3);
    padding-right: var(--space-6);
  }
}

<div>
  <select
    aria-label="dropdown"
    class="c-hqoSmB c-hqoSmB-sUrCW-size-lg"
  />
</div>
`;

exports[`Select component renders select with a default option 1`] = `
@media  {
  .c-hqoSmB {
    -webkit-appearance: none;
    appearance: none;
    background-color: white;
    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23757575%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23757575%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
    background-repeat: no-repeat, repeat;
    border: 1px solid var(--colors-tonal300);
    border-radius: var(--radii-0);
    color: var(--colors-tonal600);
    display: block;
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-hqoSmB:hover {
    cursor: pointer;
  }

  .c-hqoSmB:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-hqoSmB::-ms-expand {
    display: none;
  }

  .c-hqoSmB[disabled],
  .c-hqoSmB > option[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-hqoSmB-ggkvuX-size-md {
    background-position: right var(--space-3) top 50%, 0 0;
    background-size: 20px auto, 100%;
    font-size: var(--fontSizes-md);
    height: var(--sizes-4);
    padding-left: var(--space-3);
    padding-right: var(--space-6);
  }
}

<div>
  <select
    aria-label="dropdown"
    class="c-hqoSmB c-hqoSmB-ggkvuX-size-md"
  >
    <option
      disabled=""
      hidden=""
      selected=""
      value=""
    >
      Please select:
    </option>
    <option
      value="value1"
    >
      Option 1
    </option>
    <option
      value="value2"
    >
      Option 2
    </option>
    <option
      value="value3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Select component renders select with a disabled option 1`] = `
@media  {
  .c-hqoSmB {
    -webkit-appearance: none;
    appearance: none;
    background-color: white;
    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23757575%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23757575%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
    background-repeat: no-repeat, repeat;
    border: 1px solid var(--colors-tonal300);
    border-radius: var(--radii-0);
    color: var(--colors-tonal600);
    display: block;
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-hqoSmB:hover {
    cursor: pointer;
  }

  .c-hqoSmB:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-hqoSmB::-ms-expand {
    display: none;
  }

  .c-hqoSmB[disabled],
  .c-hqoSmB > option[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-hqoSmB-ggkvuX-size-md {
    background-position: right var(--space-3) top 50%, 0 0;
    background-size: 20px auto, 100%;
    font-size: var(--fontSizes-md);
    height: var(--sizes-4);
    padding-left: var(--space-3);
    padding-right: var(--space-6);
  }
}

<div>
  <select
    aria-label="dropdown"
    class="c-hqoSmB c-hqoSmB-ggkvuX-size-md"
  >
    <option
      value="value1"
    >
      Option 1
    </option>
    <option
      value="value2"
    >
      Option 2
    </option>
    <option
      value="value3"
    >
      Option 3
    </option>
    <option
      disabled=""
      value="value4"
    >
      Option 4
    </option>
  </select>
</div>
`;

exports[`Select component renders select with no options 1`] = `
@media  {
  .c-hqoSmB {
    -webkit-appearance: none;
    appearance: none;
    background-color: white;
    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23757575%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23757575%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
    background-repeat: no-repeat, repeat;
    border: 1px solid var(--colors-tonal300);
    border-radius: var(--radii-0);
    color: var(--colors-tonal600);
    display: block;
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-hqoSmB:hover {
    cursor: pointer;
  }

  .c-hqoSmB:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-hqoSmB::-ms-expand {
    display: none;
  }

  .c-hqoSmB[disabled],
  .c-hqoSmB > option[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-hqoSmB-ggkvuX-size-md {
    background-position: right var(--space-3) top 50%, 0 0;
    background-size: 20px auto, 100%;
    font-size: var(--fontSizes-md);
    height: var(--sizes-4);
    padding-left: var(--space-3);
    padding-right: var(--space-6);
  }
}

<div>
  <select
    aria-label="dropdown"
    class="c-hqoSmB c-hqoSmB-ggkvuX-size-md"
  />
</div>
`;
